k8s/kafka-connect.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect-deployment
  namespace: mkx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect
  template:
    metadata:
      labels:
        app: kafka-connect
    spec:
      containers:
        - name: kafka-connect
          image: quay.io/debezium/connect:2.7
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: "200m"
              memory: "384Mi"
            limits:
              cpu: "800m"
              memory: "1536Mi"

          readinessProbe:
            httpGet:
              path: /connectors
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6

          # ★ 커넥터 자동 적용: postStart 훅
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -lc
                  - |
                    [...]
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect-service
  namespace: mkx
spec:
  type: ClusterIP
  ports:
    - name: rest
      port: 8083
      targetPort: 8083
  selector:
    app: kafka-connect
