k8s/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
  namespace: mkx
spec:
  replicas: 1
  # 어떤 파드를 이 ReplicaSet이 관리할지 결정
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      # Service의 selector와 일치해야 서비스 연결 가능
      labels:
        app: kafka
    spec:
      # Kafka + Redis 전용 노드 배치 (Messaging)
      nodeSelector:
        workload: messaging
      
      tolerations:
      - key: workload
        operator: Equal
        value: messaging
        effect: NoSchedule
      
      containers:
        - name: kafka
          image: apache/kafka:3.7.0
          ports:
            - containerPort: 9092  # 내부 브로커 포트(클러스터 내 접근)
            - containerPort: 9093  # KRaft 컨트롤러 포트
          volumeMounts:
            - name: kafka-data
              mountPath: /tmp/kraft-combined-logs  # KRaft 로그/데이터 경로
          # 리소스 설정 (중요 인프라, 실 사용 대비 메모리 여유 확보)
          resources:
            requests:
              cpu: "500m"
              memory: "1536Mi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
      volumes:
        - name: kafka-data
          emptyDir: {}  # 빠른 성능, 7일 retention으로 충분

---
apiVersion: v1
kind: Service
metadata:
  # 내부 전용 접근 엔드포인트(DNS: mkx-kafka.mkx.svc.cluster.local)
  name: kafka-service
  namespace: mkx
spec:
  type: ClusterIP
  ports:
    - name: broker-internal
      port: 9092       # 서비스 포트
      targetPort: 9092 # 파드 컨테이너 포트
    - name: controller
      port: 9093
      targetPort: 9093
  selector:
    app: kafka
